# NCD

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  LICENSE  OLSRegression.ipynb  README.md  bitset.h  client.c  detector.cfg  icmp.c  icmp.h  makefile  ncd.1  ncd.c  ncd.h  ncd_main.c  ncd_no_raw.c  ping.c  ping_ip.c  playground.sql  server.c  skel.c  test_header.sh  test_runner.sh  tracert.c  travis_setup.sh  unit_test.c  unit_test.cpp  unit_test.h  wireshark_high_entropy_run.pcapng  wireshark_kill.pcapng  wireshark_low_entropy_run.pcapng
co_op_udp_client/: CMakeLists.txt  client.cpp
co_op_udp_server/: CMakeLists.txt  co_op_udp_server.cpp  co_op_udp_server.hpp  server_main.cpp
docs/html/: annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  pages.html
docs/html/d0/d30/: md_README.html
docs/html/d0/d49/: icmp_8h_source.html
docs/html/d1/d20/: server_8c.html  server_8c_source.html
docs/html/d7/d31/: tracert_8c.html  tracert_8c_source.html
docs/html/d7/d51/: ping__ip_8c.html  ping__ip_8c_source.html
docs/html/d8/d24/: structpseudo__header.html
docs/html/d8/db9/: test_8c.html  test_8c_source.html
docs/html/d9/d54/: ping_8c.html  ping_8c_source.html
docs/html/da/ddd/: README_8md.html  README_8md_source.html
docs/html/dc/d68/: ncd_8h.html  ncd_8h_source.html
docs/html/dd/d93/: client_8c.html  client_8c_source.html
docs/html/df/dfe/: ncd_8c.html  ncd_8c_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  pages_0.js  search.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
docs/latex/: annotated.tex  files.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
docs/latex/d0/d30/: md_README.tex
docs/latex/d1/d20/: server_8c.tex
docs/latex/d7/d31/: tracert_8c.tex
docs/latex/d7/d51/: ping__ip_8c.tex
docs/latex/d8/d24/: structpseudo__header.tex
docs/latex/d8/db9/: test_8c.tex
docs/latex/d9/d54/: ping_8c.tex
docs/latex/dc/d68/: ncd_8h.tex
docs/latex/dd/d93/: client_8c.tex
docs/latex/df/dfe/: ncd_8c.tex
include/: base_udp_detector.hpp  base_upd_detector.hpp  bitset.h  co_op_data.hpp  co_op_udp_detector.hpp  detector.hpp  icmp_packet.hpp  ip_checksum.h  ip_icmp_packet.hpp  ip_tcp_packet.hpp  ip_udp_packet.hpp  ncd.h  ncd_global.h  packet.hpp  simple_bitset.h  spq_co_op_detector.cpp  spq_co_op_detector.hpp  tcp_detector.hpp  tcp_packet.hpp  udp_detector.hpp  udp_packet.hpp
ncd/: CMakeLists.txt  ncd.c  ncd.h  ncd_global.h  ncd_main.c
ncd/Test/: CMakeLists.txt  ncd_unit_test.cpp  ncd_unit_test.hpp
scripts/: Metadata_format.txt  __init__.py  connect.sh  experiment.sh  functions.sh  install.sh  log_ncd_nova.sh  log_ncd_uranus.sh  log_tcpdump.sh  log_udp_ncd_nova.sh  make_log.sh  ncd.sh  ncd_experiment.sql  schedule.py  schedule_at.sh  setup.py  sql_test.sh  start_experiment.sh  tcp_test_runner.sh  testDB.sql  test_format.txt  test_header.sh  test_runner.sh
scripts/SQL/: latestDB.sql  newTestdb.sql  sql_commands.sql  sql_insert_test.sql  testproc.sql
scripts/SQL/python/ExperimentSQL/: ExperimentSQL.py  ExperimentSQL.py.orig  pcap_script.py  sql.cfg
scripts/ScheduleManager/: ScheduleManager.py  ScheduleManager.py.bak  __init__.py
scripts/ScheduleManager/test/: golden.txt  golden.txt.bak  test_schedule_manager.py  test_schedule_manager.py.bak
scripts/julia/: example.jl  plot_baseline.jl  plot_packets_ids.jl
scripts/python/: CommandMaker.py  SingleExperiment.py  pcap_packets.py  plotSPQAggregate.py  process_pcap.py  vary_parameters.py  vary_police.py  vary_shaping.py  vary_single.py  vary_spq.py
scripts/python/PlotMaker/: pcap_packets.py  process_pcap.py
scripts/python/ScheduleManager/: ScheduleManager.py  __init__.py  schedule.txt
scripts/python/ScheduleManager/test/: __init__.py  test_schedule_manager.py
scripts/shell/: compression.sh  create_suid.sh  install.sh  non_co_op.sh  non_co_op_experiment.sh  police.sh  schedule_at.sh  shaping.sh  single_compression.sh  spq.sh  spq_experiment.sh  start_experiment.sh  tcp_experiment.sh  test_runner.sh
scripts/shell/old/: log_ncd_nova.sh  log_ncd_uranus.sh  test_header.sh
single_threaded_server/: CMakeLists.txt  SingleThreadedServer.cpp  SingleThreadedServer.hpp  SingleThreadedServerMain.cpp  server_session.cpp  server_session.hpp  session.cpp  session.hpp
spq_client/: CMakeLists.txt  blacklist.txt  spq_client.cpp  spq_co_op_detector.hpp
src/: buildcommand  detector_cfg.cpp  detector_main.cpp  ncd.c  ncd.h  ncd_main.c
src/co_op_udp_server/: CMakeLists.txt  co_op_udp_server.cpp  co_op_udp_server.hpp
test/: detector_unit_test.cpp  detector_unit_test.hpp  ncd_unit_test.cpp  ncd_unit_test.hpp  unit_test.cpp  unit_test.h  unit_test.hpp
